<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".ConnectionErrorFragment">
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/blue"
      android:padding="10dp"
      >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:text="@string/header_connection_timeout"
        android:backgroundTint="@color/blue_light"
        />
  </RelativeLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="10dp"
      android:orientation="vertical"
      >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/body_connection_timeout"
        android:textColor="@color/black"
        android:textSize="20sp"
      />
    <EditText
        android:id="@+id/edtNewHost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_newhostname"
        android:textSize="20sp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
      <LinearLayout
          android:orientation="horizontal"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentEnd="true"
          tools:ignore="UselessParent">
        <Button
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnlb_oki"
            android:layout_marginEnd="10dp"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnlb_cancel"
            tools:ignore="ButtonStyle" />

      </LinearLayout>
    </RelativeLayout>

  </LinearLayout>


</LinearLayout>