<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="70dp"
    android:paddingRight="70dp"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    tools:context=".PredictCharacterActivity">


  <ImageView
      android:id="@+id/imageView"
      android:layout_width="match_parent"
      android:layout_weight="2"
      android:contentDescription="@string/imv_description"
      tools:srcCompat="@tools:sample/backgrounds/scenic"
      android:layout_height="0dp" />

  <LinearLayout
      android:id="@+id/mainContainer"
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_weight="1"
      android:layout_height="0dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/lb_prediction"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/txtLabel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/lb_predicted_label"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:visibility="gone"
        />

    <ProgressBar
        android:id="@+id/indicator"
        android:theme="@style/blueAccent"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:layout_gravity="center"
        />
  </LinearLayout>

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_weight="1"
      android:layout_gravity="center"
      android:layout_height="0dp">
    <Button
        android:id="@+id/btnContinue"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:backgroundTint="@color/blue"
        android:text="@string/btnlb_continue" />
  </RelativeLayout>


</LinearLayout>